--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -8,8 +8,6 @@
 <title>Insert title here</title>
 </h:head>
 <h:body>
-	<h2>Hello word</h2>
-	<h:commandButton value="OK"/>
-	<p:commandButton value="OKOK"/>
+	<h2>Hello word!</h2>
 </h:body>
 </html>
